--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.11",
         "spatie/laravel-query-builder": "^5.5"
     },
